<resources>
    <string name="app_name">Utilio</string>
    <string name="content_authority">com.github.nikhilbhutani.utilio</string>
    <string name="step_count">0</string>
    <string name="steps_title">Steps</string>

    <string name="dataused_count_dashboard">0</string>
    <string name="data_used_title">Total Data Used</string>


    <string name="minutesused_count_dashboard">0</string>
    <string name="phone_used_title">Phone Usage</string>


    <string name="lasttimeused">"Last time used: "</string>
    <string name="timespan">"Time span: "</string>

     <string name="explanation_access_to_appusage_is_not_enabled">Failed to retrieve app usage
        statistics. You may need to enable access
        for this app through Settings > Security > Apps with usage access
    </string>

    <string name="package_name">Package Name</string>
    <string name="apps_name">App Name</string>
    <string name="downloaded_data">Downloaded data</string>
    <string name="uploaded_data">Uploaded data</string>

    //Content Descriptions
    <string name="imageview_steps">Step</string>
    <string name="imageview_networkdata">Data</string>
    <string name="imageview_phoneusage">Phone</string>
    <string name="tv_datausagecount_cd">Data usage count</string>
    <string name="tv_stepcount_cd">Step count</string>
    <string name="tv_phoneusagecount_cd">Phone count</string>
    <string name="image_download_icon">Download</string>
    <string name="image_upload_icon">Upload</string>
    <string name="app_icon_image">App Icon</string>
    <string name="share_icon">Share</string>
    <string name="backdrop_image">Backdrop</string>



</resources>
